--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,8 @@
 {
   "name": "@sauber/table",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "exports": "./mod.ts",
   "imports": { "@std/assert": "jsr:@std/assert@^0.224.0" },
-  "lock": false
+  "lock": false,
+  "exclude": ["src/*.test.ts", ".vscode"]
 }
